Aligned the website's name in the center for the mobile version, ensuring the correct position.

--- a/style.css
+++ b/style.css
@@ -309,7 +309,6 @@ footer {
         text-align: center;
         z-index: 1003;
         display: flex;
-        padding-left: 40px;
     }
 
     .spiderWebFlat {
